adjust transaction request
