# docs/swagger.json
@@ -45,12 +45,12 @@
                 "summary": "Create a new transaction",
                 "parameters": [
                     {
-                        "description": "Transaction",
+                        "description": "Create Transaction",
                         "name": "transaction",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Transaction"
+                            "$ref": "#/definitions/models.TransactionRequest"
                         }
                     }
                 ],
@@ -113,6 +113,30 @@
                 },
                 "id": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.TransactionRequest": {
+            "type": "object",
+            "required": [
+                "action",
+                "amount"
+            ],
+            "properties": {
+                "action": {
+                    "enum": [
+                        "add",
+                        "sub",
+                        "adj"
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.ActionType"
+                        }
+                    ]
+                },
+                "amount": {
+                    "type": "number"
                 }
             }
         }
